pruned the NEWS

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 == News and History ==
 
-Copyright (C) 2006 - 2012  H. Dieter Wilhelm GPL V3
+Copyright (C) 2006 - 2012  H. Dieter Wilhelm, GPL V3
 
 === Version 14.0.1 ===
 
